[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["JOJ Dev Team <liuyh615@126.com>"]
description = "JOJ Judge Daemon"
license = "MIT"
name = "joj-tiger"
packages = [
    { include = "joj" },
]
repository = "https://github.com/joint-online-judge/tiger/"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.8.1"
aioredlock = "^0.7.2"
autograder-sandbox = {git = "https://github.com/joint-online-judge/autograder-sandbox.git", branch = "develop" }
celery = {extras = ["redis"], version = "^5.2.1"}
docker = "^5.0.3"
eventlet = "^0.33.0"
horse-python-client = {git = "https://github.com/joint-online-judge/horse-python-client.git", branch = "master"}
joj-elephant = {git = "https://github.com/joint-online-judge/elephant.git", branch = "master"}
loguru = "^0.5.3"
pydantic-universal-settings = "^0.1.4"
PyJWT = "^2.3.0"
python = "^3.8"
python-benedict = "^0.24.3"
tenacity = "^8.0.1"
watchgod = "^0.7"

[tool.poetry.dev-dependencies]
