[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "normal"
no_implicit_reexport = true
plugins = "pydantic.mypy"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.poetry]
authors = ["JOJ Dev Team <liuyh615@126.com>"]
description = "JOJ Judge Daemon"
license = "MIT"
name = "joj-tiger"
packages = [
    { include = "joj" },
]
repository = "https://github.com/joint-online-judge/tiger/"
version = "0.1.0"

[tool.poetry.dependencies]
aiodocker = "^0.21.0"
aioredlock = "^0.7.2"
celery = {extras = ["redis"], version = "^5.2.1"}
horse-python-client = {git = "https://github.com/joint-online-judge/horse-python-client.git"}
joj-elephant = {git = "https://github.com/joint-online-judge/elephant.git"}
loguru = "^0.5.3"
msgpack = "^1.0.3"
orjson = "^3.6.8"
pydantic-universal-settings = "^0.1.4"
pytest = {version = "^6.2.5", optional = true}
pytest-asyncio = {version = "^0.15.1", optional = true}
pytest-celery = {version = "^0.0.0", optional = true}
pytest-cov = {version = "^2.12.1", optional = true}
pytest-depends = {version = "^1.0.1", optional = true}
pytest-lazy-fixture = {version = "^0.6.3", optional = true}
python = "^3.8"
python-benedict = "^0.24.3"
tenacity = "^8.0.1"
uvloop = "^0.16.0"
watchgod = "^0.7"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
pre-commit = "^2.15.0"

[tool.poetry.extras]
test = [
    "asgi-lifespan",
    "asynctest",
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-celery",
    "pytest-cov",
    "pytest-depends",
    "pytest-lazy-fixture",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest]
filterwarnings = 'ignore::SecurityWarning'
