[metadata]
name = joj-tiger
version = 0.0.1
author = JOJ Dev Team
author-email = liuyh615@126.com
summary = JOJ Judge Daemon
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
project_urls =
    Source Code = https://github.com/joint-online-judge/tiger
license = MIT
keywords =
    oj

[files]
packages =
    joj.tiger
